# ALON_Assignment

./: .gitignore  CLAUDE.md  README.md  assignment.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  plan.md  pyproject.toml  requirements.txt  seed_data.py
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: sensor_data.py  sensors.py  tasks.py
backend/app/core/: config.py  db.py  exceptions.py
backend/app/services/: data_ingestion.py  health_checker.py
frontend/: README.md  index.html  package-lock.json  package.json  plan.md
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  ThemeProvider.tsx  TimezoneProvider.tsx
frontend/src/components/sensor-data/: DataChart.tsx  DataFilters.tsx  DataTable.tsx  Pagination.tsx
frontend/src/components/sensors/: ModeToggle.tsx  SensorCard.tsx  SensorList.tsx
frontend/src/constants/: sensors.ts
frontend/src/hooks/: useSensorBrokenMutation.ts  useSensorData.ts  useSensorModeMutation.ts  useSensors.ts
frontend/src/pages/: SensorDataPage.tsx  SensorsPage.tsx
frontend/src/styles/: global.css
frontend/src/types/: api.ts
frontend/src/utils/: formatTime.ts
sensor/: README.md  config.py  main.py  plan.md  requirements.txt  sensor_manager.py
